Cambios nuevos y enrutamineto

--- a/angular_bases/src/app/pages/components/shared/navbar/navbar.html
+++ b/angular_bases/src/app/pages/components/shared/navbar/navbar.html
@@ -21,5 +21,7 @@
 <nav>
   <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" >Contador</a>
   <a [routerLink]="['/hero']" [routerLinkActive]="'active'" >Hero</a>
+  <a routerLink="/bnha" [routerLinkActive]="'active'" >BNHA</a>
+  <a [routerLink]="['/bnha-next']" routerLinkActive="active" >BNHA next</a>
   <!--Otros  -->
 </nav>
