--- a/angular_bases/src/app/pages/bnha copy/bnha-next-.html
+++ b/angular_bases/src/app/pages/bnha copy/bnha-next-.html
@@ -1,6 +1,8 @@
 <h1>Pagina de BNHA</h1>
 <section class="row">
   <div class="col-12 col-sm-6">
+    <!--bnha-character-add-->
+    <!--Desde aqui-->
     <h3>Agregar: {{name()}}  </h3>
     <input
       [value]="name()"
@@ -21,26 +23,12 @@
       placeholder="poder"
     >
     <button (click)="addCharacter()"   class="mt-2 btn btn-primary">Agregar</button>
+    <!--Fin de aca-->
   </div>
   <div class="col-12 col-sm-6">
-    <h3>listado</h3>
-    <ul>
-      @for (personajes of characters(); track personajes.id; let index= $index){
-        @if ( personajes.poder>600){
-          <li>
-            <span> {{index+1}} -  {{personajes.name}}  </span>
-            <strong
-              [class.text-danger]="personajes.poder>1400"
-              [class.text-primary]="personajes.poder<1400"
-            >
-              ({{personajes.poder}}) </strong>
-          </li>
-        } @else {
-          <li><strong>Aqui no hay nada papu!</strong></li>
-        }
+    <bhna-characters-lis
+      listName="Listado de personajes"
+      [characters]="characters()"/>
 
-      }
-
-    </ul>
   </div>
 </section>
